# Cynth

./: CMakeLists.txt
src/: core.h  csynth.c  csynth.h  platform.h  platform_apple_impl.c
